Added space for notifications

--- a/Win10Notifications/App.xaml
+++ b/Win10Notifications/App.xaml
@@ -3,6 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Win10Notifications"
-    RequestedTheme="Light">
+    RequestedTheme="Light"
+    xmlns:converters="using:Win10Notifications.Converters">
+
+    <Application.Resources>
+        <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
+    </Application.Resources>
 
 </Application>
