--- a/Win10Notifications/MainPage.xaml
+++ b/Win10Notifications/MainPage.xaml
@@ -12,7 +12,7 @@
     <Grid x:Name="LayoutRoot" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
@@ -23,20 +23,22 @@
             <Grid Margin="20,10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock
                     Text="NOTIFICATIONS"
                     Style="{ThemeResource SubtitleTextBlockStyle}"/>
+                <Button Grid.Column="1" x:Name="ClearNotificationsButton" Content="Clear Notifications" Margin="20,0,20,0" Click="ClearNotificationsButton_Click"/>
             </Grid>
             <TextBlock
-                Text="{Binding ViewModel.Error}"
+                Text="{Binding Error}"
                 Style="{ThemeResource BodyTextBlockStyle}"
-                Visibility="{Binding ViewModel.Error, Converter={StaticResource StringToVisibilityConverter}, ElementName=ThisPage}"
+                Visibility="{Binding Error, Converter={StaticResource StringToVisibilityConverter}, ElementName=ThisPage}"
                 Grid.Row="1"/>
             <ListView
                 x:Name="ListViewNotifications"
                 Grid.Row="2"
-                ItemsSource="{Binding ViewModel.Notifications, ElementName=ThisPage}"
+                ItemsSource="{Binding Notifications, ElementName=ThisPage}"
                 IsItemClickEnabled="True"
                 ItemClick="ListViewNotifications_ItemClick">
                 <ListView.ItemTemplate>
@@ -67,7 +69,6 @@
                 <StackPanel Margin="0,0,0,10" Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan ="2">
                     <Button Name="ListenButton" Margin="20,0,20,0" Click="ListenButton_Click">Start Listening</Button>
                     <Button x:Name="DisconnectButton" Margin="20,0,20,0" IsEnabled="False" Click="DisconnectButton_Click" Content="Disconnect"/>
-                    <Button x:Name="ClearNotificationsButton" Content="Clear Notifications" Margin="20,0,20,0" Click="ClearNotificationsButton_Click"/>
                 </StackPanel>
                 <ScrollViewer Grid.Row="2" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
                     <Grid Margin="0,10,0,0">
