--- a/Win10Notifications/MainPage.xaml
+++ b/Win10Notifications/MainPage.xaml
@@ -54,7 +54,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid x:Name="Input">
+            <Grid x:Name="Input" Margin="20,10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -62,8 +62,7 @@
                 </Grid.RowDefinitions>
                 <StackPanel Margin="0,0,0,10">
                     <TextBlock x:Name="InputTextBlock1" TextWrapping="Wrap" Grid.Row="0" HorizontalAlignment="Left">
-                        Once a client is connected to the Bluetooth Rfcomm server, write the
-                        message you want to transmit to the client and click "Send".
+                        Once a client is connected to the Bluetooth Rfcomm server, make a toast notification to transmit to the client.
                     </TextBlock>
                 </StackPanel>
                 <StackPanel Margin="0,0,0,10" Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan ="2">
@@ -72,19 +71,10 @@
                 </StackPanel>
                 <ScrollViewer Grid.Row="2" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
                     <Grid Margin="0,10,0,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.ColumnSpan="2" Style="{StaticResource BaseTextBlockStyle}" TextWrapping="Wrap">Enter a message to send:</TextBlock>
-                        <TextBox x:Name="MessageTextBox" Grid.Column="0" Grid.Row="1" Margin="0,10,10,0" KeyDown="KeyboardKey_Pressed"/>
-                        <Button x:Name="SendButton" Grid.Column="1" Grid.Row="1" Content="Send" Margin="0,10,10,0" Click="SendButton_Click"/>
-                        <ListBox x:Name="ConversationListBox" Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0"
+                        <ListBox x:Name="ConversationListBox"
                                  HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="300" Margin="0,10,0,0" ScrollViewer.HorizontalScrollMode="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto"/>
                     </Grid>
                 </ScrollViewer>
