Notification Apps list is saved to a file (bytes) (only one app), in settings notification apps list is visible (only one app)

--- a/Win10Notifications/Controls/MyToastNotificationControl.xaml
+++ b/Win10Notifications/Controls/MyToastNotificationControl.xaml
@@ -44,7 +44,7 @@
                     Style="{ThemeResource CaptionTextBlockStyle}"/>
                 <TextBlock
                     x:Name="TextBlockAppName"
-                    Text="Facebook"
+                    Text="App"
                     Style="{ThemeResource CaptionTextBlockStyle}"/>
             </StackPanel>
 
