--- a/Win10Notifications/Settings.xaml
+++ b/Win10Notifications/Settings.xaml
@@ -20,7 +20,7 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <SymbolIcon Name="Back" Grid.Column="0" Symbol="Back" Margin="30,0,30,0" Tapped="Back_Tapped"></SymbolIcon>
+                <SymbolIcon Name="Back" Grid.Column="0" Symbol="Back" Margin="30,0,30,0" Tapped="Back_Tapped"/>
                 <TextBlock Grid.Column="1" Text="Settings" Style="{ThemeResource TitleTextBlockStyle}"/>
             </Grid>
             <Grid Grid.Row="1" Margin="10">
@@ -31,26 +31,34 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Send Notifications" VerticalAlignment="Center" Margin="0,0,10,0"/>
                 <ToggleSwitch Name="SendNotifications" Grid.Row="0" Grid.Column="1" Toggled="SendNotifications_Toggled"/>
+                <ToggleButton x:Name="DeleteAllButton" Grid.Row="0" Grid.Column="2" Margin="0,0,20,0" Click="DeleteAllButton_Click">
+                    <SymbolIcon Symbol="Delete"/>
+                </ToggleButton>
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Apps:" HorizontalAlignment="Right" Margin="0,0,10,0"/>
                 <ListView x:Name="ListViewNotificationApps"
-                          Grid.Row="1" Grid.Column="1"
+                          Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
                           SelectionMode="None">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="models:NotificationApp">
-                            <Grid>
+                            <Grid Padding="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <Border Grid.Column="0" Background="{ThemeResource SystemControlBackgroundAccentBrush}" Width="32" Height="32" Margin="0,0,10,0">
                                     <Image Source="{x:Bind Icon}"/>
                                 </Border>
                                 <TextBlock Grid.Column="1" Text="{x:Bind Name}" VerticalAlignment="Center"/>
-                                <ToggleSwitch Grid.Column="2" IsOn="{x:Bind Value}" HorizontalAlignment="Right"/>
+                                <ToggleSwitch Grid.Column="2" IsOn="{x:Bind Value, Mode=TwoWay}" HorizontalAlignment="Right"/>
+                                <ToggleButton x:Name="DeleteButton" Grid.Column="3" Tag="{x:Bind}" Click="DeleteButton_Click" >
+                                    <SymbolIcon Symbol="Delete"/>
+                                </ToggleButton>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
