Fixed crash when there is no app logo; when app shows notification, it won't save itself to notificatrion apps list; when checked delete all button in settings and clicked save all changes button. list will be cleared

--- a/Win10Notifications/Settings.xaml
+++ b/Win10Notifications/Settings.xaml
@@ -34,7 +34,7 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Send Notifications" VerticalAlignment="Center" Margin="0,0,10,0"/>
                 <ToggleSwitch Name="SendNotifications" Grid.Row="0" Grid.Column="1" Toggled="SendNotifications_Toggled"/>
-                <ToggleButton x:Name="DeleteAllButton" Grid.Row="0" Grid.Column="2" Margin="0,0,20,0" Click="DeleteAllButton_Click">
+                <ToggleButton x:Name="DeleteAllButton" Grid.Row="0" Grid.Column="2" Margin="0,0,20,0" Checked="DeleteAllButton_Checked">
                     <SymbolIcon Symbol="Delete"/>
                 </ToggleButton>
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Apps:" HorizontalAlignment="Right" Margin="0,0,10,0"/>
@@ -55,7 +55,7 @@
                                 </Border>
                                 <TextBlock Grid.Column="1" Text="{x:Bind Name}" VerticalAlignment="Center"/>
                                 <ToggleSwitch Grid.Column="2" IsOn="{x:Bind Value, Mode=TwoWay}" HorizontalAlignment="Right" Toggled="ToggleSwitch_Toggled"/>
-                                <ToggleButton x:Name="DeleteButton" Grid.Column="3" IsChecked="{x:Bind Delete, Mode=TwoWay}" Click="DeleteButton_Click" >
+                                <ToggleButton x:Name="DeleteButton" Grid.Column="3" IsChecked="{x:Bind Delete, Mode=TwoWay}" Checked="DeleteButton_Checked" >
                                     <SymbolIcon Symbol="Delete"/>
                                 </ToggleButton>
                             </Grid>
