Added toggleswitch in settings to send winamp information

--- a/Win10Notifications/MainPage.xaml
+++ b/Win10Notifications/MainPage.xaml
@@ -101,7 +101,7 @@
                 </CommandBar.SecondaryCommands>
 
                 <CommandBar.Content>
-                    <TextBlock Name="SongTitle" Margin="12,14"/>
+                    <TextBlock Name="SongTitle" Margin="12,14" TextWrapping="WrapWholeWords"/>
                 </CommandBar.Content>
             </CommandBar>
         </Grid>
